# Fair-MAST-to-FreeGSNKE-Conversion-tool

./: .gitignore  AGENTS.md  CHANGELOG.md  HOW_TO_RUN.txt  README.md  pyproject.toml  requirements-freegsnke.txt  requirements.txt  run_pipeline.cmd  run_pipeline.sh
.cursor/: README.md
.cursor/agents/: authority-auditor.md  freegsnke-integrator.md  mast-freegsnke-super.md  pipeline-orchestrator.md  run-doctor.md
.cursor/rules/: authority-determinism.mdc  north-star-shot-only.mdc  ship-gate.mdc
configs/: coil_map.json  config.example.json  default.json  diagnostic_calibration.example.json  diagnostic_calibration.json  diagnostic_contracts.example.json  diagnostic_contracts.json  efit_compare_authority.json  evolutive_authority.json  l1_voltage_inventory_30201.json  passive_resistivity.json  smoke_data_path.json  torax_geometry_export_authority.json  voltage_map.json
docs/adr/: 001-optional-torax-downstream-coupling.md  002-fairmast-efit-compare.md  003-reject-pyefit-windows-path.md  README.md
examples/02_window_inference/: README.md
machine_authority/: FREEGSNKE_MACHINE_PROVENANCE.json  active_coils.pickle  authority_manifest.json  coil_geometry.json  diagnostic_registry.json  probe_geometry.json  wall.pickle
scripts/: build_authority_from_fairmast.py  build_classic_mast_machine.py  ensure_freegsnke_env.py  ensure_s5cmd.py  fetch_freegsnke_machine.py  smoke_30201.py
src/mast_freegsnke/: __init__.py  (+42 more)
templates/: evolutive_run.py.tpl  forward_run.py.tpl  inverse_run.py.tpl
tests/: test_classic_mast_machine.py  test_contracts.py  test_diagnostic_calibration.py  test_efit_compare_layout.py  test_equilibrium_presentation.py  test_experimental_data.py  test_fail_closed_execute.py  test_freegsnke_runner.py  test_interactive_launcher.py  test_machine_authority_template.py  test_multitime_inverse.py  test_p1_p2_hardening.py  test_preflight.py  test_real_contract_metrics.py  test_rerun_hygiene.py  test_science_audit.py  test_shot_suitability.py  test_template_safety.py  test_torax_geometry_export.py  test_v114_hardening.py  test_v11_evolutive_shot_layout.py  test_v8_replay_forensics.py  test_window_sources.py
(+22 files in other folders)
