[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mast-freegsnke-pipeline"
version = "11.10.0"
description = "Shot-only FAIR-MAST (classic MAST) → FreeGSNKE: static inverse/forward + evolutive forward, authorities, residual metrics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "numpy>=1.23.0",
  "pandas>=2.0.0",
  "matplotlib>=3.6.0",
  "pillow>=10.0.0",
  # FAIR-MAST Level-2 Zarr (required for fresh installs / EFIT archive compare)
  "xarray>=2023.12.0",
  "fsspec>=2023.12.0",
  "zarr>=3.1.0",
  "s3fs>=2023.12.0",
]

[project.optional-dependencies]
zarr = [
  "xarray>=2023.12.0",
  "fsspec>=2023.12.0",
  "zarr>=3.1.0",
  "s3fs>=2023.12.0",
]
dev = ["pytest>=7.4.0"]

[project.scripts]
mast-freegsnke = "mast_freegsnke.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".venv", ".venv-freegsnke", "temp", "data_cache", "SHOT", "SHOTS", "tools", "build", "dist", "*.egg-info"]
